fix quotes padding, spacing of hero children divs, header divs

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,9 @@ ul {
 
 .header {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding-left: 10%;
+    padding-right: 10%;
 
 }
 
@@ -64,15 +66,22 @@ ul {
 .hero {
     display: flex;
     flex: 1 1 0;
-    justify-content: space-evenly;
-    
+    justify-content: space-between;
+    padding-left: 10%;
+    padding-right: 10%;
+    gap: 20%
+}
+
+.hero-text {
+    margin-top: 5%;
+    margin-bottom: 5%
 }
 
 .hero-main {
     font-size: 48px;
     color: #F9FAF8;
 
-    width: 400px;
+    flex: 1 1 0;
 }
 
 .hero-secondary {
@@ -94,10 +103,12 @@ ul {
     display: flex;
     height: 200px;
     width: 400px;
-    flex-grow: 0;
+    flex: 0 0 auto;
     background-color: grey;
     justify-content: center;
     align-items: center;
+    margin-top: 5%;
+    margin-bottom: 5%
 }
 
 .image-text {
@@ -110,30 +121,37 @@ ul {
 .body2 {
     display: flex;
     flex: 1 1 0;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .quotes {
-    padding-left: 120px;
-    padding-right: 120px;
+    padding-left: 20%;
+    padding-right: 20%;
     background-color: #E5E7EB;
     display: flex;
     flex: 1 1 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .quotes-content {
     font-style: italic;
     font-size: 32px;
+    margin-top: 5%;
 }
 
 .quotes-author {
     font-weight: bold;
     align-self: flex-end;
+    margin-bottom: 5%
 }
 
 .body4 {
     display: flex;
-    flex: 1 1 0; 
+    flex: 1 1 0;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
